fix row margin when large, right icon spacing in CSS API

--- a/packages/core/src/components/button/_button.scss
+++ b/packages/core/src/components/button/_button.scss
@@ -127,6 +127,10 @@ Styleguide pt-button
 
   #{$icon-classes} {
     color: $pt-icon-color;
+
+    &.pt-align-right {
+      margin-left: $button-icon-spacing;
+    }
   }
 
   // button with SVG icon only (no text or children)
